User Domain Consolidation: runs user capabilities inside post service
* Add: User, characteristic, and social domains to post-service while retaining the standalone module. Copied the existing Quarkus packages and preserved Liquibase change-set identities through logical file paths.

* Add: Combined-schema coverage for local post, feed, vote, agent, and migration flows. Used QuarkusTest, RestAssured, Testcontainers PostgreSQL, and a test-only Liquibase changelog.

* Add: Environment-driven Expo routing for the combined backend. Used EXPO_PUBLIC_POST_SERVICE_HOST and EXPO_PUBLIC_POST_SERVICE_PORT through the existing service configuration keys and .env.example.

* Update: REST-client-named adapters to invoke local user-domain services without changing their public contracts. Used CDI application-scoped classes with worker execution and Vert.x context restoration where reactive callers require it.

* Update: Post-service database, authentication, observability, and frontend documentation for the combined deployment. Used Quarkus configuration, shared request filtering, copied migrations and seeds, and ADR-025.